--- a/src/styles/core/objects.product.scss
+++ b/src/styles/core/objects.product.scss
@@ -1,3 +1,13 @@
+.list > button {
+  display: flex;
+}
+
+.list {
+  text-align: center;
+  flex-direction: column;
+  display: flex;
+}
+
 .#{$namespace}product {
   position: relative;
   display: inline-block;
@@ -5,11 +15,18 @@
   /* min-width: 6em; */
   padding: 3.5em 1.5em 2em;
   /* padding: 54px; */
-  background: #f5f5f5;
+  background: rgb(232, 232, 232);
   border-radius: 5px;
-  -ms-flex: 0 0 16em;
-  flex: 0 0 16em;
-  margin: 0 1em 2.5em;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+
+  margin: 0 1em 1em;
+
+  &--container {
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    padding-top: 122px;
+  }
 
   .#{$namespace}product__info {
     display: block;
@@ -19,6 +36,7 @@
     > span {
       display: block;
       padding: 1em 0;
+      margin-top: 35px;
     }
   }
 
@@ -31,6 +49,7 @@
     font-size: 150%;
     text-align: center;
     margin-bottom: 0px;
+    margin-top: 30px;
   }
 
   .#{$namespace}product__add {
